--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item first-slide active">
+    <div class="carousel-item first-slide">
       <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
       </div>
@@ -27,7 +27,7 @@
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
-    <div class="carousel-item third-slide">
+    <div class="carousel-item third-slide active">
       <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
       </div>
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <button class="glyphicon-chevron-left left carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+  <button class="glyphicon-chevron-left left carousel-control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
