--- a/main.html
+++ b/main.html
@@ -43,11 +43,11 @@
       </div>
     </div>
   </div>
-  <button class="glyphicon-chevron-left left carousel-control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+  <button class="glyphicon-chevron-left glyphicon left carousel-control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="glyphicon-chevron-right right carousel-control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+  <button class="glyphicon-chevron-right glyphicon right carousel-control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
